tests/fixtures/invalid/pow_set_list_none.py
# Cannot call pow() with Set[int], List[int], None
x = pow({1, 2, 3}, [1, 2, 3], None)
